fixed responsive layout issue in blogs page

--- a/style/style.scss
+++ b/style/style.scss
@@ -220,8 +220,10 @@ body {
     .navbar .menu-wrap{display: flex}
     .navbar .navlinks{display: none}
     .navbar .icon{padding-left: 3rem}
+    .blogPosts #prevtxt{display: none}
+    .blogscontainer .blogPosts{grid-template-columns: repeat(1, minmax(100%, 1fr));}
 }
-  
+
 @media(max-width:720px) {
     .showcase .container{padding: 2rem}
     .blogscontainer{padding: 2rem}
@@ -242,4 +244,6 @@ body {
     .preview .headrp{font-size: 2rem}
     .navbar .navlinks{width:40%}
     .navbar .icon{padding-left: 2rem}
+    .blogPosts #prevtxt{display: none}
+    .blogscontainer .blogPosts{grid-template-columns: repeat(1, minmax(100%, 1fr));}
 }
